cli/tests/testdata/test/aggregate_error.out
running 1 test from ./test/aggregate_error.ts
aggregate ... FAILED ([WILDCARD])

 ERRORS 

aggregate => ./test/aggregate_error.ts:[WILDCARD]
error: AggregateError
    Error: Error 1
        at [WILDCARD]/testdata/test/aggregate_error.ts:2:18
    Error: Error 2
        at [WILDCARD]/testdata/test/aggregate_error.ts:3:18
  throw new AggregateError([error1, error2]);
        ^
    at [WILDCARD]/testdata/test/aggregate_error.ts:5:9

 FAILURES 

aggregate => ./test/aggregate_error.ts:[WILDCARD]

FAILED | 0 passed | 1 failed ([WILDCARD])

error: Test failed
